# libtro

./: .clang-format  .gitignore  LICENSE  meson.build
include/: meson.build  troio.h
include/tro/: conditionals.h  dybuffer.h  strconv.h  string.h  time.h
include/tro/private/: api.h  bool.h
src/: meson.build
src/strconv/: float.c  float16.c  float_T.c  int.c  int16.c  int_T.c  meson.build
src/string/: fmt16_parser.c  fmt_parser.c  fmt_parser.h  fmt_parser_T.c  meson.build  sfmt.c  sfmt16.c  sfmt_T.c  str16.c  str16dybuf.c  strdybuf.c  strdybuf_T.c  unicode.c  unicode_bits.c
src/time/: meson.build  sleep.c
src/troio/: file.h  file_unix.c  file_win32.c  meson.build  outinerr.c
src/utils/: math.h
tests/: meson.build  test_utils.h
tests/strconv/: float2str.c  float2str16.c  int2str.c  int2str16.c  meson.build  utils.h
tests/string/: fmt16_parser.c  fmt_parser.c  meson.build  rune_to_u16.c  rune_to_u16_1.c  rune_to_u16_2.c  rune_to_u16_e1.c  rune_to_u16_e2.c  rune_to_u8.c  rune_to_u8_1.c  rune_to_u8_2.c  rune_to_u8_3.c  rune_to_u8_4.c  rune_to_u8_e1.c  rune_to_u8_e2.c  sfmt.c  str16_rune_len.c  str16_to_str8.c  str16dybuf.c  str8_rune_len.c  str8_rune_len_e.c  str8_to_str16.c  str8_to_str16_e.c  strdybuf.c  u16_to_rune.c  u8_to_rune.c  u8_to_rune_1.c  u8_to_rune_2.c  u8_to_rune_3.c  u8_to_rune_4.c  u8_to_rune_e1.c  u8_to_rune_e2.c  u8_to_rune_e3.c  u8_to_rune_e4.c  u8_to_rune_e5.c
