float2str = executable(
    'float2str',
    'float2str.c',
    include_directories: public_includes,
    link_with: [lib],
)
test('float2str', float2str)

float2str16 = executable(
    'float2str16',
    'float2str16.c',
    include_directories: public_includes,
    link_with: [lib],
)
test('float2str16', float2str16)

int2str = executable(
    'int2str',
    'int2str.c',
    include_directories: public_includes,
    link_with: [lib],
)
test('int2str', int2str)

int2str16 = executable(
    'int2str16',
    'int2str16.c',
    include_directories: public_includes,
    link_with: [lib],
)
test('int2str16', int2str16)

