rune_to_u8 = executable(
    'rune_to_u8',
    'rune_to_u8.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('rune_to_u8', rune_to_u8)

rune_to_u16 = executable(
    'rune_to_u16',
    'rune_to_u16.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('rune_to_u16', rune_to_u16)

str8_rune_len = executable(
    'str8_rune_len',
    'str8_rune_len.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str8_rune_len', str8_rune_len)

str8_to_str16 = executable(
    'str8_to_str16',
    'str8_to_str16.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str8_to_str16', str8_to_str16)

u8_to_rune = executable(
    'u8_to_rune',
    'u8_to_rune.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('u8_to_rune', u8_to_rune)
