fmt_parser = executable(
    'fmt_parser',
    'fmt_parser.c',
    include_directories: [public_includes, project_includes],
    link_with: [lib],
)
test('fmt_parser', fmt_parser)

fmt16_parser = executable(
    'fmt16_parser',
    'fmt16_parser.c',
    include_directories: [public_includes, project_includes],
    link_with: [lib],
)
test('fmt16_parser', fmt16_parser)

rune_to_u8 = executable(
    'rune_to_u8',
    'rune_to_u8.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('rune_to_u8', rune_to_u8)

rune_to_u16 = executable(
    'rune_to_u16',
    'rune_to_u16.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('rune_to_u16', rune_to_u16)

str8_rune_len = executable(
    'str8_rune_len',
    'str8_rune_len.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str8_rune_len', str8_rune_len)

str8_to_str16 = executable(
    'str8_to_str16',
    'str8_to_str16.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str8_to_str16', str8_to_str16)

str16_rune_len = executable(
    'str16_rune_len',
    'str16_rune_len.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str16_rune_len', str16_rune_len)

str16_to_str8 = executable(
    'str16_to_str8',
    'str16_to_str8.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str16_to_str8', str16_to_str8)

str16dybuf = executable(
    'str16dybuf',
    'str16dybuf.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('str16dybuf', str16dybuf)

strdybuf = executable(
    'strdybuf',
    'strdybuf.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('strdybuf', strdybuf)

u8_to_rune = executable(
    'u8_to_rune',
    'u8_to_rune.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('u8_to_rune', u8_to_rune)

u16_to_rune = executable(
    'u16_to_rune',
    'u16_to_rune.c',
    include_directories: [public_includes],
    link_with: [lib],
)
test('u16_to_rune', u16_to_rune)
